Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110285

Deadlock in QAndroidCamera destruction

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.5.7, 6.6.0
    • 6.5
    • Multimedia
    • None
    • Android
    • 9c0604e0d (dev), 7922ae486 (tqtc/lts-6.5)
    • 2023wk02FOQtforAndroid

      There is a deadlock in QAndroidCamera destruction. The simplest deleting QCamera object:

      #include <QApplication>
      #include <qcamera.h>
      
      int main(int argc, char *argv[])
      {
          QApplication a(argc, argv);
          QCamera * camera = new QCamera();
          qWarning() << "HELLO 1";
          delete camera;
          qWarning() << "HELLO 2";
          return 0;
      }
      

      Will not print "HELLO 2" log, as the thread will be blocked.

       

      Deadlock need to be fixed

       

        For Gerrit Dashboard: QTBUG-110285
        # Subject Branch Project Status CR V

            bartlomiejmoskal Bartlomiej Moskal
            bartlomiejmoskal Bartlomiej Moskal
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes